sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:19: error: not found: value deplaceJoueur
          case (baseDepart,posDepart) => deplaceJoueur(baseDepart, posDepart, base, 0)
                                         ^SelectBaseball:27: error: not found: value deplaceJoueur
          case (baseDepart,posDepart) => deplaceJoueur(baseDepart, posDepart, base, 1)
                                         ^